# django-simple-todo-app

./: README.md  pyproject.toml
django_project/: settings.py  urls.py
templates/: _base.html  about.html
templates/todos/: todos_detail.html  todos_edit.html  todos_list.html
todos/: admin.py  forms.py  models.py  urls.py  views.py
todos/migrations/: 0001_initial.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
