[tool.poetry]
name = "simple-todo-app"
version = "0.1.0"
description = ""
authors = ["Pui Kit Li <59538991+PKLJack@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "simple_todo_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
